chore: add homepage and repository

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "author": "Victor Ribeiro Boechat",
+  "homepage": "https://github.com/vboechat/tasks-crud",
   "license": "MIT",
   "scripts": {
     "build": "nest build",
@@ -16,6 +17,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vboechat/tasks-crud"
   },
   "dependencies": {
     "@fastify/csrf-protection": "^6.2.0",
