feat: add example swagger configuration to env file

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ DB_PASSWORD=
 DB_NAME=
 ## Set DB_SYNC to false in production
 DB_SYNC=true
+
+# Swagger Configuration
+SWAGGER_PATH=api
+## Set SWAGGER to false in production
+SWAGGER=false
